--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kpeizfilms</title>
+  <title>KPEIZFILMS</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body style="background-color:rgb(0, 0, 0);">
+    <a href="#"><div style="text-align:center;" class="deconstructed">
+        KPEIZFILMS
+        <div>KPEIZFILMS</div>
+        <div>KPEIZFILMS</div>
+        <div>KPEIZFILMS</div>
+        <div>KPEIZFILMS</div>
+      </div></a>
   <app-root></app-root>
 </body>
 </html>
